# Crossword-Generator

./: CMakeLists.txt  README.md  main.cpp
puzzles/puzzle1/: dictionary.txt  puzzle.txt
puzzles/puzzle2/: puzzle.txt
puzzles/puzzle3/: puzzle.txt
puzzles/puzzle4/: dictionary.txt  puzzle.txt
src/: constraints.h  crossword_constructor.h  crossword_entry.cpp  crossword_entry.h  crossword_utils.cpp  crossword_utils.h  forward_checking_data.cpp  forward_checking_data.h  lcv_heuristic.cpp  lcv_heuristic.h  mrv_heuristic.cpp  mrv_heuristic.h
